<resources>
    <string name="app_name">Npad</string>

    <string name="pagemanger_new_document_dialog_title">New Document&#8230;</string>
    <string name="editor_action_more">More</string>
    <string name="editor_action_new">New</string>
    <string name="editor_action_set_background">Set background&#8230;</string>
    <string name="editor_action_clear_background">Clear to default</string>
    <string name="editor_action_save">Save</string>
    <string name="editor_action_import">Import&#8230;</string>
    <string name="editor_action_setting">Settings</string>
    <string name="editor_action_photoMode">Hide UI</string>
    <string name="editor_action_undo">Undo</string>
    <string name="editor_action_redo">Redo</string>

    <string name="text_styling_bold">Bold</string>
    <string name="text_styling_italic">Italic</string>
    <string name="text_styling_underline">Underline</string>


    <string name="save_dialog_msg">Save changes to document before closing?</string>

    <string name="dialog_msg_incompatible_document_type"> is not a compatible document type.</string>

    <string name="toast_msg_photo_mode_instruction">Tap and hold to exit</string>

    <string name="dialog_msg_exi_photo_mode">Exit Photo Mode?</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_key_internal_wallpaper_name">internal_wallpaper_name</string>

    <string name="pref_category_general_name">General</string>

    <string name="pref_title_page_autoload">Auto-load last page on start?</string>
    <string name="pref_key_page_autoload">page_autoload</string>

    <string name="pref_category_wallpaper_name">Background</string>

    <string name="pref_title_dimmer_intensity">Background dimmer</string>
    <string name="pref_key_dimmer_intensity">dimmer_intensity</string>
    <integer name="pref_default_shade_intensity">27</integer>
    <integer name="pref_shade_intensity_min">0</integer>
    <integer name="pref_shade_intensity_max">100</integer>

    <string name="pref_title_scaling">Background scaling</string>
    <string name="pref_key_scaling">wallpaper_scaling</string>
    <string name="to_width">width</string>
    <string name="to_height">height</string>
    <string name="stretch">stretch</string>
    <string-array name="pref_scaling_titles">
        <item>Fit</item>
        <item>Fill</item>
        <item>Stretch</item>
    </string-array>
    <string-array name="pref_scaling_values">
        <item>@string/to_width</item>
        <item>@string/to_height</item>
        <item>@string/stretch</item>
    </string-array>
    <string name="pref_default_scaling">@string/to_height</string>
    <string name="pref_key_draw_default_background">draw_default_background</string>
    <bool name="pref_default_draw_default_background">false</bool>

    <string name="pref_key_last_opened_page_id">lastOpenedPageId</string>

    <string name="pref_key_clear_thumbs">clearThumbs</string>



    <!-- Custom Views -->

    <string name="preference_clearable_btn_text">Clear</string>



</resources>
