<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory app:title="@string/pref_category_general_name">
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_page_autoload"
            android:key="@string/pref_key_page_autoload"
            android:title="@string/pref_title_page_autoload" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_wallpaper_name">
        <androidx.preference.SeekBarPreference
            app:defaultValue="@integer/pref_default_shade_intensity"
            app:key="@string/pref_key_dimmer_intensity"
            app:min="@integer/pref_shade_intensity_min"
            android:max="@integer/pref_shade_intensity_max"
            app:title="@string/pref_title_dimmer_intensity"
            app:icon="@drawable/ic_action_wallpaper_dimmer"
            app:showSeekBarValue="true"
            app:updatesContinuously="true"
            />
        <ListPreference
            app:defaultValue="@string/pref_default_scaling"
            app:entries="@array/pref_scaling_titles"
            app:entryValues="@array/pref_scaling_values"
            app:key="@string/pref_key_scaling"
            app:title="@string/pref_title_scaling"
            app:icon="@drawable/ic_action_wallpaper_scaling"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="Dev">
        <Preference
            app:icon="@drawable/ic_action_thumbnail_clear"
            app:key="@string/pref_key_clear_thumbs"
            app:title="Clear thumbnails" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
